--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<menu>
+    <ul>
+        <li>
+            <a houterLink="/">Home</a>
+            <a houterLink="/">Nuevo</a>
+        </li>
+    </ul>
+</menu>
