--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -19,6 +19,7 @@ div´{
     padding: 0 5px;
 }
 .price{
+    
     display: flex;
     width: 50%;
     padding: 0 5px;
@@ -39,4 +40,22 @@ div´{
     text-align: center;
     box-sizing: border-box;
     padding: 0 5px;
+}
+.actions{
+    width: 10%;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0 5px;
+}
+.actions button{
+    border: none;
+    font-size: 12px;
+    background-color: red;
+    color: white;
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+.actions button:hover{
+    background-color: darkred;
 }
